# OpenGL

./: .gitignore  README.MD  main.cpp
OpenGL-1/: CMakeLists.txt
glad/include/glad/: gl.h
